--- a/src/app/alert/alert-list/alert-list.component.css
+++ b/src/app/alert/alert-list/alert-list.component.css
@@ -1,3 +1,36 @@
+body{
+  background-color: white;
+}
+
+/* Error/Loading stuff */
+.errorMsg {
+  font-size: 30px;
+  color: grey;
+  border-left: 2px solid #d92027
+}
+
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .25);
+  z-index: 2;
+  cursor: pointer
+}
+
+#spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #009dff;
+  width: 5rem;
+  height: 5rem
+}
+
 #alerts{
   margin-top: 25px;
 }
