--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,49 +8,28 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-          class="nav-link" (click)="logout()" *ngIf="isLoggedIn">Logout</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:false}" class="mx-2 nav-item"><a
-          class="nav-link" [routerLink]="['/search']">Search</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item"><a
-          class="nav-link" [routerLink]="['/beta']">Alerts</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item"><a
-          class="nav-link" [routerLink]="['/contact']">Contact</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item"><a
-          class="nav-link" [routerLink]="['/login']" *ngIf="!isLoggedIn">Login</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item"><a
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:false}" class="mx-2 nav-item"><a class="nav-link" [routerLink]="['/search']">Search</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item"><a class="nav-link" [routerLink]="['/event/list']">Events</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item"><a class="nav-link" [routerLink]="['/alert/list']">Alerts</a></li>
-      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item"><a class="nav-link" [routerLink]="['/contact']">Contact</a></li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:false}" class="mx-2 nav-item">
+        <a class="nav-link" [routerLink]="['/search']">Search</a>
+      </li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" *ngIf="isLoggedIn" class="mx-2 nav-item">
+        <a class="nav-link" [routerLink]="['/event/list']">Events</a>
+      </li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" *ngIf="isLoggedIn" class="mx-2 nav-item">
+        <a class="nav-link" [routerLink]="['/alert/list']">Alerts</a>
+      </li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="mx-2 nav-item">
+        <a class="nav-link" [routerLink]="['/contact']">Contact</a>
+      </li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:false}" *ngIf="!isLoggedIn" class="mx-2 nav-item">
+        <i class="fa fa-user"></i>
+        <a class="nav-link" [routerLink]="['/login']" >Login</a>
+      </li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" *ngIf="isLoggedIn" class="mx-2 nav-item">
+        <i class="fa fa-sign-out"></i>
+        <a class="nav-link" (click)="logout()" >Logout</a>
+      </li>
     </ul>
   </div>
 </nav>
 <router-outlet></router-outlet>
 
-<!-- banner -->
-<div *ngIf="displayBetaSignUp" class="banner">
-  <div class="banner-wrapper banner-glow">
-    <div class="row">
-      <div class="col-xl-12">
-        <div class="banner-header">
-          <span (click)="closeBetaDisplay()" class="banner-close-btn"><i class="fa fa-times"></i></span>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xl-12">
-        <b>Alerts - <i>Beta</i></b>
-        <hr>
-      </div>
-      <div class="col-xl-12">
-        <div class="banner-content">
-          <span>Sign up for the beta release of our nightly notification tool</span>
-          <br>
-          <a id="joinBtn" class="btn btn-darker" [routerLink]="['/beta']">
-            <span>Join Waitlist!</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
