--- a/src/app/event/event-list/event-list.component.css
+++ b/src/app/event/event-list/event-list.component.css
@@ -1,3 +1,7 @@
+body{
+  background-color: white;
+}
+
 @media (min-width: 1200px) {
   .container{
     max-width: 1500px;
@@ -36,6 +40,7 @@ hr{
 .eventMetaItem{
   border-bottom: 1px solid #B8B8B8;
   color: #606060;
+  text-transform: capitalize;
 }
 
 .eventMetaItem i{
@@ -54,17 +59,54 @@ hr{
   font-size: 20px;
 }
 
-.readMore{
+.eventText .readMore{
   background-color: #d92027;
-  color: #fff;
   border: 1px solid #d92027;
+  color: #fff;
   opacity: .75;
 }
 
-.readMore:hover{
+.eventText .readMore:hover{
   opacity: 1.0;
+  background-color: #d92027;
+  border: 1px solid #d92027;
+  color: #fff;
 }
 
 .highlight {
   background: #fcff00 !important;
+}
+
+/* Error/Loading stuff */
+.errorMsg {
+  font-size: 30px;
+  color: grey;
+  border-left: 2px solid #d92027
+}
+
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .25);
+  z-index: 2;
+  cursor: pointer
+}
+
+#spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #009dff;
+  width: 5rem;
+  height: 5rem
+}
+
+.noEventsMsg{
+  font-size: 32px;
+  /*font-weight: bold;*/
 }
