--- a/src/app/alert/alert-create/alert-create.component.css
+++ b/src/app/alert/alert-create/alert-create.component.css
@@ -1,5 +1,17 @@
-body{
-  background-color: white;
+@media (min-width: 1200px) {
+  .container{
+    max-width: 1500px;
+  }
+}
+
+h2{
+  font-family: Roboto, sans-serif;
+  color: #07092f;
+  text-align: justify;
+}
+
+hr.header{
+  border-top: 1px solid #d92027;
 }
 
 .mat-form-field {
@@ -168,3 +180,33 @@ body{
   }
 }
 
+
+
+/* Error/Loading stuff */
+.errorMsg {
+  font-size: 30px;
+  color: grey;
+  border-left: 2px solid #d92027
+}
+
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .25);
+  z-index: 2;
+  cursor: pointer
+}
+
+#spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #009dff;
+  width: 5rem;
+  height: 5rem
+}
