--- a/src/app/contact/create-contact/create-contact.component.css
+++ b/src/app/contact/create-contact/create-contact.component.css
@@ -1,51 +1,17 @@
-.formHeader {
-  background-color: #050429;
-  background-size: cover;
-  background-position: 50%;
-  text-align: center
+@media (min-width: 1200px) {
+  .container{
+    max-width: 1500px;
+  }
 }
 
-.teaser-text h3 {
-  font-size: 40px
+h2{
+  font-family: Roboto, sans-serif;
+  color: #07092f;
+  text-align: justify;
 }
 
-.teaser-zone {
-  background-size: cover;
-  background-position: 50%;
-  background-repeat: no-repeat;
-  padding: 100px 0 40px
-}
-
-.errorMsg {
-  font-size: 30px;
-  color: grey;
-  border-left: 2px solid #d92027
-}
-
-.docTitle {
-  text-transform: capitalize
-}
-
-#overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, .25);
-  z-index: 2;
-  cursor: pointer
-}
-
-#spinner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  color: #009dff;
-  width: 5rem;
-  height: 5rem
+hr.header{
+  border-top: 1px solid #d92027;
 }
 
 .contact-info {
@@ -131,17 +97,16 @@
   }
 }
 
-.contact-section .btn_2 {
-  background-color: #191d34;
-  padding: 18px 60px;
-  border-radius: 50px;
-  margin-top: 0
+.contactBtn{
+  background-color: #d92027;
+  border: 1px solid #d92027;
+  color: #fff;
+  opacity: .75;
 }
 
-.contact-section .btn_2:hover {
-  background-color: #ff5e13
-}
-
-.contactus {
-  margin-top: 50px
+.contactBtn:hover{
+  opacity: 1.0;
+  background-color: #d92027;
+  border: 1px solid #d92027;
+  color: #fff;
 }
