--- a/src/app/contact/create-contact/create-contact.component.html
+++ b/src/app/contact/create-contact/create-contact.component.html
@@ -1,32 +1,16 @@
-<!-- teaser-zone_start -->
-<div class="formHeader">
-  <div class="container hide-mobile">
-    <div class="row align-items-center justify-content-center">
-      <div class="col-xl-9">
-        <div class="teaser-text text-center">
-          <h3>Contact Us</h3>
-        </div>
-      </div>
+<div class="container pt-5 pb-3">
+  <div class="row">
+    <div class="col-12">
+      <h2>Contact Us</h2>
+      <hr class="header">
     </div>
   </div>
 </div>
-<!-- teaser-zone_end -->
-
-<!-- ContactModel -->
-<div class="contactus container page-body">
+<div class="container page-body">
   <div class="row">
     <div class="col-xl-12">
       <form class="form-contact contact_form" id="contactForm" novalidate="novalidate">
         <div class="row">
-          <div class="col-sm-12">
-            <div class="row align-items-center justify-content-center">
-              <div class="col-xl-12">
-                <div class="text-center only-mobile">
-                  <h2>Contact Us</h2><br>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col-sm-12">
             <div class="form-group">
               <input [(ngModel)]="contact.name" class="form-control valid" id="name" name="name" type="text" id="fullNameInput" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'">
@@ -54,7 +38,7 @@
           </div>
         </div>
         <div class="form-group mt-3">
-          <button (click)="sendContact()" type="submit" class="button boxed-btn">Send</button>
+          <button (click)="sendContact()" type="submit" class="btn btn-primary contactBtn">Send</button>
           <br>
           <br>
         </div>
