--- a/src/app/document/document-show/document-show.component.css
+++ b/src/app/document/document-show/document-show.component.css
@@ -1,26 +1,45 @@
-body{
-  background-color: white;
+@media (min-width: 1200px) {
+  .container{
+    max-width: 1500px;
+  }
 }
 
-.formHeader {
-  background-color: #050429;
-  background-size: cover;
-  background-position: 50%;
-  text-align: center
+h2{
+  font-family: Roboto, sans-serif;
+  color: #07092f;
+  text-align: justify;
 }
 
-.teaser-text h3 {
-  font-size: 40px
+hr.header{
+  border-top: 1px solid #d92027;
 }
 
+.docTitle {
+  text-transform: capitalize;
+}
+
+.download {
+  text-align: right;
+  padding: 20px
+}
+
+.document-container{
+  /*background: #f8f9ff;*/
+  /*border-radius: 5px;*/
+  background-color: #BEBEBE;
+}
+
+.document-content{
+  background-color: #ffffff;
+  /*padding: 30px;*/
+  word-wrap: break-word;
+}
+
+/* Error/Loading stuff */
 .errorMsg {
   font-size: 30px;
   color: grey;
   border-left: 2px solid #d92027
-}
-
-.docTitle {
-  text-transform: capitalize
 }
 
 #overlay {
@@ -43,62 +62,4 @@ body{
   color: #009dff;
   width: 5rem;
   height: 5rem
-}
-
-.document .regular-blockquote {
-  margin-left: 30px;
-  padding: 0 0 0 20px;
-  border-radius: 10px
-}
-
-.document .download {
-  text-align: right;
-  padding: 20px
-}
-
-
-/* Results */
-
-.search-result {
-  margin-top: 20px
-}
-
-@media (max-width:767px) {
-  .search-result {
-    border: 2px solid #e8e8e8;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 20px
-  }
-}
-
-.search-result blockquote {
-  margin: 20px 30px;
-  background: 0 0
-}
-
-.search-result span {
-  color: #484848;
-  line-height: 2;
-  font-weight: 700
-}
-
-.search-result a.result-title {
-  font-size: 24px;
-  color: #1d2572;
-  text-decoration: underline;
-  font-weight: 700
-}
-
-.search-result blockquote .result-content {
-  background: #f8f9ff;
-  padding: 30px;
-  word-wrap: break-word;
-}
-
-@media (min-width:767px) {
-  .search-result blockquote .result-content {
-    border-radius: 10px;
-    word-wrap: break-word;
-  }
 }
