--- a/src/app/event/event-list/event-list.component.css
+++ b/src/app/event/event-list/event-list.component.css
@@ -1,11 +1,17 @@
-body{
-  background-color: white;
-}
-
 @media (min-width: 1200px) {
   .container{
     max-width: 1500px;
   }
+}
+
+h2{
+  font-family: Roboto, sans-serif;
+  color: #07092f;
+  text-align: justify;
+}
+
+hr.header{
+  border-top: 1px solid #d92027;
 }
 
 
@@ -19,14 +25,6 @@ body{
 
 .eventItem{
   /*border-bottom: 2px solid #050429;*/
-}
-
-hr{
-  width: 100%;
-  height: 1px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #000;
 }
 
 .eventMeta{
@@ -77,6 +75,22 @@ hr{
   background: #fcff00 !important;
 }
 
+.noEventsMsg{
+  font-size: 32px;
+  /*font-weight: bold;*/
+}
+
+
+/* No clue why this ones different */
+hr.eventSeparator{
+  width: 100%;
+  height: 1px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
 /* Error/Loading stuff */
 .errorMsg {
   font-size: 30px;
@@ -104,9 +118,4 @@ hr{
   color: #009dff;
   width: 5rem;
   height: 5rem
-}
-
-.noEventsMsg{
-  font-size: 32px;
-  /*font-weight: bold;*/
 }
