--- a/src/app/event/event-show/event-show.component.css
+++ b/src/app/event/event-show/event-show.component.css
@@ -1,47 +1,22 @@
-body{
-  background-color: white;
-}
-
-.highlight {
-  background: #fcff00 !important;
-}
-
-/* Error/Loading stuff */
-.errorMsg {
-  font-size: 30px;
-  color: grey;
-  border-left: 2px solid #d92027
-}
-
-#overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, .25);
-  z-index: 2;
-  cursor: pointer
-}
-
-#spinner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  color: #009dff;
-  width: 5rem;
-  height: 5rem
-}
-
-
 @media (min-width: 1200px) {
   .container{
     max-width: 1500px;
   }
 }
 
+h2{
+  font-family: Roboto, sans-serif;
+  color: #07092f;
+  text-align: justify;
+}
+
+hr.header{
+  border-top: 1px solid #d92027;
+}
+
+.highlight {
+  background: #fcff00 !important;
+}
 
 .eventToolbar{
   color: white;
@@ -52,15 +27,6 @@ body{
 }
 
 .eventItem{
-  /*border-bottom: 2px solid #050429;*/
-}
-
-hr{
-  width: 100%;
-  height: 1px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #000;
 }
 
 .eventMeta{
@@ -68,7 +34,6 @@ hr{
 }
 
 .eventMeta .spacer{
-  /*border-bottom: 1px solid #909090;*/
 }
 
 .eventMetaItem{
@@ -167,3 +132,34 @@ mat-panel-title{
   background-color: #009dff
 }
 
+
+
+/* Error */
+.errorMsg {
+  font-size: 30px;
+  color: grey;
+  border-left: 2px solid #d92027
+}
+
+/* Loading */
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .25);
+  z-index: 2;
+  cursor: pointer
+}
+
+#spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #009dff;
+  width: 5rem;
+  height: 5rem
+}
