--- a/src/app/event/event-show/event-show.component.html
+++ b/src/app/event/event-show/event-show.component.html
@@ -1,11 +1,20 @@
-<div *ngIf="errorMsg != null" class="document container page-body">
-  <div class="row mx-auto pt-4">
+<div class="container pt-5 pb-3">
+  <div class="row">
+    <div class="col-12">
+      <h2 *ngIf="event == null" >Event</h2>
+      <h2 *ngIf="event != null" >{{event.documentTitle}}</h2>
+      <hr class="header">
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div *ngIf="errorMsg != null" class="row mx-auto pt-4">
     <p class="errorMsg p-3">{{errorMsg}}</p>
   </div>
 </div>
 
-<!-- Event -->
-<div *ngIf="success" class="container pt-5 pb-5">
+<div *ngIf="success" class="container">
   <div *ngIf="event != null" class="eventItem row p-2">
     <!-- Meta Data -->
     <div class="eventMeta pt-1 col-lg-3 col-md-6 col-sm-12 col-12">
@@ -30,7 +39,7 @@
     <!-- Data data -->
     <div class="eventText col-lg-9 col-md-6 col-sm-12 col-12">
       <!-- Event Title -->
-      <div class="title py-2 pb-4">{{event.documentTitle}}</div>
+<!--      <div class="title py-2 pb-4">{{event.documentTitle}}</div>-->
       <!-- Event Status -->
       <div class="form-group">
         <label for="eventOwner">Owner</label>
