--- a/src/app/search/main/main.component.html
+++ b/src/app/search/main/main.component.html
@@ -30,6 +30,16 @@
   </div>
 </div>
 <!-- teaser-zone_end -->
+
+<!-- Customer Request -->
+<div class="container pt-3">
+  <div class="col-12">
+    <div class="alert alert-primary" role="alert">
+      Don't see your city or county? Request it <a class="alert-link" routerLink="/contact">here</a>!
+    </div>
+  </div>
+</div>
+
 <!-- filter area -->
 <div class="search-zone">
   <div class="container">
