--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-  <a class="navbar-brand" [routerLink]="['/home']">
+  <a class="navbar-brand" [routerLink]="['/']">
     <img src="../assets/images/logo/logoRegGreyVertical.png" alt="Council Search">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
